--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: d2XS3Ba7fIfQJv6uUFfJIA
+# Checksum: SE9XMuQp6XbgJoxmftIF5w
 # Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2230,6 +2230,7 @@
 /Share/ads/
 /share/ads/
 /shared/ad_
+/shinystat.cgi?
 /shortmediads/
 /show-ad.php?
 /show.cgi?adp
