--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -43,6 +43,7 @@
 .diarioti.com/sisimg/banners/
 .diximedia.es/
 .ebuddy.com/web_banners/
+.economico.pt/public/uploads/banners/
 .eladelantado.com/imagenes/banner
 .elmundo.es/banners
 .elotrolado.net/styles/estiloeol/imageset/banner_
