--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -54,6 +54,7 @@
 .es/imagenesDDN/banners/
 .es/traffic/?
 .guiadasemana.com.br/images/tit_pub_
+.gazetaesportiva.net/js/banners/
 .globalasia.es/images/banners/
 .hotwords.com.br/
 .hotwords.com.mx/
@@ -141,6 +142,7 @@ http://ads.adpv.com/
 http://ads.grupozeta.es/
 http://ads.olx.com/
 http://ads.periodistadigital.com/
+http://ads.gazetaesportiva.net/
 http://ads.prisacom.com/
 http://ads.xl.pt/
 http://adw.
