--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -90,6 +90,7 @@
 .pt/images/banners/
 .publipagos.com/
 .rankia.com/promo
+.record.xl.pt/rec/i/pub
 .sapo.pt/banner.swf
 .sapo.pt/images_banner/
 .sapo.pt/t2.asp
