--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -55,6 +55,7 @@
 .es/traffic/?
 .guiadasemana.com.br/images/tit_pub_
 .gazetaesportiva.net/js/banners/
+.globo.com/vitrine/shop.html?
 .globalasia.es/images/banners/
 .hotwords.com.br/
 .hotwords.com.mx/
