--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -131,6 +131,7 @@
 /publicidades/
 _fullbanner_balanca_
 _publicidad2.
+_publicidade.
 http://187.6.64.32/especialdenatal/home/produto_
 http://200.72.40.46/
 http://ac.viatecla.pt/?
