--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: HTZlYvchJ6ddN5y+Fyh4+A
-# Updated: 19 Jun 2010
+# Checksum: Of333x9Y32V8T+o0zFtZKA
+# Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1313,8 +1313,7 @@
 /728x90/
 /728x90?
 /728x90_
-/728x90b.
-/728x90ban
+/728x90b
 /728x90c
 /728x90n
 /750-100
