--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Of333x9Y32V8T+o0zFtZKA
+# Checksum: riICSdZawLAiyjGuIcaF7Q
 # Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3222,6 +3222,7 @@ http://network.gofeminin.de/diff/
 http://new-popups.ru/
 http://newads.
 http://newt1.adultadworld.
+http://network.business.com/search/
 http://npvos.com/images/
 http://ns4w.org/images/promo/
 http://ns4w.org/images/vod_
