--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: riICSdZawLAiyjGuIcaF7Q
+# Checksum: SmKnvEpYkmgb+SUOdZwlPw
 # Updated: 20 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2320,6 +2320,7 @@
 /thumbs/ads/
 /tikilink?
 /tizers.php?
+/TDLads/
 /tmo/ads/
 /toigoogleads.
 /top_ad.
