--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SmKnvEpYkmgb+SUOdZwlPw
-# Updated: 20 Jun 2010
+# Checksum: CnPG3+6nrjGb0598FbRsaw
+# Updated: 21 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1377,6 +1377,7 @@
 /ad/realclick
 /ad/serve.php
 /ad/sponsors/
+/ad/quigo/
 /ad/swf/
 /ad/textlinks/
 /ad1.htm
