--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: CnPG3+6nrjGb0598FbRsaw
+# Checksum: uB5TQk6WYx5r11V8va1OFg
 # Updated: 21 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1711,6 +1711,7 @@
 /AuditudeAdUnit.
 /auth.tbn.
 /awempire.js
+/avchatpure.swf
 /backlinxxx/js/
 /ban.php?
 /BanMan/
