--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: SE9XMuQp6XbgJoxmftIF5w
-# Updated: 20 Jun 2010
+# Checksum: O+np4CONIRk9QPwnDdXcZw
+# Updated: 21 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2230,7 +2230,6 @@
 /Share/ads/
 /share/ads/
 /shared/ad_
-/shinystat.cgi?
 /shortmediads/
 /show-ad.php?
 /show.cgi?adp
