--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -18,6 +18,7 @@
 .acecounter.
 .active-tracking.
 .activemeter.
+.agencytradingdesk.net/
 .addfreestats.
 .addlvr.com/
 .addthis.com/red/psi/p.json?
