--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: O+np4CONIRk9QPwnDdXcZw
-# Updated: 21 Jun 2010
+# Checksum: e55EE6eRU1tyqmQHdOMR0w
+# Updated: 22 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -3179,6 +3179,7 @@ http://jobs.ajaxian.com/
 http://jobsyndicate.com/
 http://js.picsomania.info/
 http://jsads.
+http://jsg.dt00.net/
 http://kaktuz.com/banner/
 http://kermit.macnn.com/?DC
 http://kinopokaz.org/
