--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /VPpFwISYZPRhw3OPzFVog
-# Updated: 24 Jun 2010
+# Checksum: NShfCH7Kmr2xYm91t8PyUA
+# Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1212,6 +1212,7 @@
 .zxxds.net/
 /.adserv/
 //ptrfc.com/
+/1200x70_
 /120600.
 /120_600.
 /120x240_
