--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: NShfCH7Kmr2xYm91t8PyUA
+# Checksum: qvvAEr241Tx/+lFGL8TIDA
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1037,9 +1037,9 @@
 .stileproject.com/static_html/stilep.js
 .stolenpornpasswords.
 .streamate.
+.streamate.com/exports/
 .streamateaccess.com/
 .streamen.com/exports/
-.streamate.com/exports/
 .streamray.com/
 .stupidnakedpeople.com/local_media/banners/
 .sublimemedia.
@@ -1560,8 +1560,8 @@
 /ads/banner
 /ads/click_
 /ads/freewheel/
-/ads/html/
 /ads/generator/
+/ads/html/
 /ads/iframe.
 /ads/image/
 /Ads/Images/
@@ -1887,8 +1887,8 @@
 /flash/maildating_
 /flash_advertising/
 /flashpeelads/
-/fleshlightcash_
 /fleshlight.com/
+/fleshlightcash_
 /floatadv.
 /floater_ad.
 /floaty_rotator
@@ -2912,6 +2912,7 @@ http://ads.brazzers.com/
 http://ads.buzzcity.net/
 http://ads.com.com/
 http://ads.contentabc.com/
+http://ads.dailystar.com
 http://ads.digitalpoint.com/
 http://ads.drugs.com/
 http://ads.e-go.gr/
@@ -2995,6 +2996,7 @@ http://adtech.panthercustomer.com/images/
 http://adtology
 http://adult3dcomics.com/
 http://adultfriendfinder.com/
+http://adultpopunders.com/
 http://adv.
 http://adv0
 http://adverserv
@@ -3004,7 +3006,6 @@ http://adverts.
 http://advprotraffic.com/
 http://advt.
 http://adweb
-http://adultpopunders.com/
 http://adyhk.scupio.com/
 http://aff-jp.
 http://affil.mupromo.com/
@@ -3035,7 +3036,6 @@ http://banner-clix.com/
 http://banner.atomicgamer.com/
 http://banner.play-asia.com/
 http://banner.themediaplanets.
-http://banners.facebookofsex.com/
 http://banner1.
 http://banners.
 http://banners.adultfriendfinder.
@@ -3043,6 +3043,7 @@ http://banners.adventory.com/
 http://banners.alt.com/
 http://banners.camdough.com/
 http://banners.cfspm.com.au/*
+http://banners.facebookofsex.com/
 http://banners.itweb.co.za/
 http://banners.ixitools.
 http://banners.moreniche.com/show.
@@ -3065,8 +3066,8 @@ http://blogvertising.pl/
 http://blueadvertise.
 http://boksy.onet.pl/
 http://box.shopoon.fr/
-http://br.rk.com/
 http://br.realitykings.com/
+http://br.rk.com/
 http://bugaga.tut.by/
 http://bwp.
 http://c.castanet.net/
