--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: qvvAEr241Tx/+lFGL8TIDA
+# Checksum: l43sG1Q9sgwf6NJM3URmDw
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2722,6 +2722,7 @@ _adengage_
 _adlog.asp?
 _adRight.
 _Ads/InHouse
+_ads1.asp
 _ads_index_
 _adshow.asp?
 _advert_vert
