--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: l43sG1Q9sgwf6NJM3URmDw
+# Checksum: mAYso3qhN2+ViFHJ/xe5MQ
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1759,6 +1759,7 @@
 /banners.cgi?
 /banners.js
 /banners.php?id
+/banners.smarttweak.com/
 /banners/160
 /banners/300
 /banners/460
