site: http://www.5min.com/Tag/food?CategoryID=0

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: mAYso3qhN2+ViFHJ/xe5MQ
+# Checksum: Dz0Dr/rs7XhyBiHK89hbmw
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3291,6 +3291,7 @@ http://promos.fling.
 http://promos.meetlocals.com/
 http://promos.naked.
 http://promotools
+http://pshared.5min.com/Graphics/Watch/Banners/
 http://pub.motion-twin.com/
 http://pubad.
 http://pubdirecte.com/
