--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: e55EE6eRU1tyqmQHdOMR0w
-# Updated: 22 Jun 2010
+# Checksum: vXBg9TGZUbC3zhF8DUwr6w
+# Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1388,6 +1388,7 @@
 /ad300x145.
 /ad728x15
 /ad?sponsor
+/ad_350x
 /AD_Banner
 /ad_banner
 /ad_base.
@@ -1411,6 +1412,7 @@
 /ad_leader.
 /ad_leader_
 /ad_leaderboard
+/ad_left_
 /ad_links/
 /ad_manage.
 /ad_medium_
@@ -1426,8 +1428,7 @@
 /ad_slide
 /ad_square_
 /ad_tag_
-/ad_top_left
-/ad_top_right
+/ad_top_
 /ad_wide_
 /ad_wrapper
 /adaffiliate_
