--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: vXBg9TGZUbC3zhF8DUwr6w
+# Checksum: rZ45As2fu0L3IoE78VwUzw
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3056,6 +3056,7 @@ http://blueadvertise.
 http://boksy.onet.pl/
 http://box.shopoon.fr/
 http://br.rk.com/
+http://br.realitykings.com/
 http://bugaga.tut.by/
 http://bwp.
 http://c.castanet.net/
