--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rZ45As2fu0L3IoE78VwUzw
+# Checksum: /mCzkwxbSPByXISZFREyDQ
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2826,6 +2826,7 @@ http://ad.be.doubleclick.net/ad/
 http://ad.blog.
 http://ad.bnmla.com/
 http://ad.ca.doubleclick.net/ad
+http://ad.de.doubleclick.net/ad/
 http://ad.doubleclick.net/ad/
 http://ad.doubleclick.net/N4675/
 http://ad.doubleclick.net/pfadx/
