--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Dz0Dr/rs7XhyBiHK89hbmw
+# Checksum: BuJnfIUS+8DBaoqnXBMB7g
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2825,6 +2825,7 @@ http://85.17.145.107/
 http://87.230.102.24/
 http://88.208.23.
 http://89.248.172.46/
+http://a.c-planet.net/b/
 http://a.thefreedictionary.
 http://aaa.at4.info/
 http://ad-clicks.com/
