--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: BuJnfIUS+8DBaoqnXBMB7g
+# Checksum: z4jOpSzJ8TUY0fljS+h7FA
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -154,6 +154,7 @@
 .adnet.vn/
 .adnxs.com/
 .adocean.pl/
+.adoptim.com/
 .adotic.com/
 .adotomy.com/
 .adparad.net/
