site: http://www.macintouch.com/

--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: z4jOpSzJ8TUY0fljS+h7FA
+# Checksum: Y+0q9wnscVtlKl4Uxogg0g
 # Updated: 23 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3414,6 +3414,8 @@ http://www.greattastenopain.com/aff/
 http://www.hardsextube.com/preroll/
 http://www.jaymancash.com/POTD/
 http://www.lyricsfreak.com/i/overlay.js?
+http://www.macintouch.com/images/amaz_
+http://www.macintouch.com/images/owc_
 http://www.nationalpubpoker.com.au/images/banners/
 http://www.nationalpubpoker.com.au/images/frontpage/corporate_ban
 http://www.npplpoker.com.au/images/banners/
