--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /mCzkwxbSPByXISZFREyDQ
-# Updated: 23 Jun 2010
+# Checksum: aUnRbRg2R28RW8yr1FhHMg
+# Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2997,6 +2997,7 @@ http://adverts.
 http://advprotraffic.com/
 http://advt.
 http://adweb
+http://adultpopunders.com/
 http://adyhk.scupio.com/
 http://aff-jp.
 http://affil.mupromo.com/
