--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: aUnRbRg2R28RW8yr1FhHMg
+# Checksum: iO6CJxrzpjeOE/qD3vYFeg
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1558,6 +1558,7 @@
 /ads/click_
 /ads/freewheel/
 /ads/html/
+/ads/generator/
 /ads/iframe.
 /ads/image/
 /Ads/Images/
@@ -1855,6 +1856,7 @@
 /doubleclickloader.
 /download/ad/
 /drawad.php?
+/droelf.kit/a/
 /dynamic_banner_
 /DynamicAd?
 /ecom/failsafe/
