--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iO6CJxrzpjeOE/qD3vYFeg
+# Checksum: YXvbE1clvwHdAVgxZUD+DA
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1884,6 +1884,7 @@
 /flash_advertising/
 /flashpeelads/
 /fleshlightcash_
+/fleshlight.com/
 /floatadv.
 /floater_ad.
 /floaty_rotator
