--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: YXvbE1clvwHdAVgxZUD+DA
+# Checksum: v+i6Nh786usjxiyia3xnJw
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3332,6 +3332,7 @@ http://sponsoredlinks.
 http://squeeder.
 http://squeeder.com/
 http://stat-data.
+http://stat.novojoy.com
 http://static.4chan.org/support/
 http://static.apture.com/media/
 http://static.jpost.com/images/2009/NewSite/
