--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: v+i6Nh786usjxiyia3xnJw
+# Checksum: o8LD1voz0fquuomw9pR2gg
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1038,6 +1038,7 @@
 .streamate.
 .streamateaccess.com/
 .streamen.com/exports/
+.streamate.com/exports/
 .streamray.com/
 .stupidnakedpeople.com/local_media/banners/
 .sublimemedia.
