--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: o8LD1voz0fquuomw9pR2gg
+# Checksum: VPwBjY5Q/EBDDjgQt/JEEA
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -761,7 +761,7 @@
 .macmillandictionary.com/info/frame.html?
 .madisonlogic.com/jsc?
 .madserver.eu/
-.magna.ru/partner/
+.magna.ru/partner/                                                                               
 .magnet.kiev.ua/
 .mail.yahoo.com/mc/md.php?
 .majorgeeks.com/images/banners/
@@ -1681,6 +1681,7 @@
 /aff-exchange/
 /aff.html
 /AFF/Banners/
+/affbanner/
 /affbanners/
 /affiliate/rotat
 /affiliate_banners/
