--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: VPwBjY5Q/EBDDjgQt/JEEA
+# Checksum: /VPpFwISYZPRhw3OPzFVog
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -614,6 +614,7 @@
 .grapeshot.co.uk/
 .grapevine.is/Media/Flash/
 .hardsextube.com/ads-
+.hentaibiz.com/b/
 .hipals.com/cgi-bin/
 .hit-now.com/
 .hitparade.ch/images/banner_
@@ -3033,6 +3034,7 @@ http://banner-clix.com/
 http://banner.atomicgamer.com/
 http://banner.play-asia.com/
 http://banner.themediaplanets.
+http://banners.facebookofsex.com/
 http://banner1.
 http://banners.
 http://banners.adultfriendfinder.
