--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: bAkGn8ZUr/ZHqcZtAuFqsA
-# Updated: 25 Jun 2010
+# Checksum: 4DWxFljy03k0ipAJVrpFfg
+# Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -775,6 +775,7 @@
 .maxcash.com/
 .maxiadv.com/
 .maxserving.com/
+.majorgeeks.com/aff/
 .mb01.com/
 .mc-nudes.com/fhg2/
 .meadigital.com/
@@ -3111,6 +3112,7 @@ http://content.liveuniverse.
 http://content.pop6.com/
 http://cp.intl.match.com/eng/prm/
 http://creatives.livejasmin.com/iframes/
+http://cts.tradepub.com/
 http://d.ads.readwriteweb.com/
 http://d.unanimis.co.uk/
 http://data.webads.co.nz/
