--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4DWxFljy03k0ipAJVrpFfg
+# Checksum: W3nV64ZU7U+UlvwqV+BlHg
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1871,6 +1871,7 @@
 /droelf.kit/a/
 /dynamic_banner_
 /DynamicAd?
+/dynamic/ads/
 /ecom/failsafe/
 /ecomfw.
 /emailads/
