--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: W3nV64ZU7U+UlvwqV+BlHg
+# Checksum: 8uZMiHWkxCbkK1BcAh/q2g
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -768,6 +768,7 @@
 .magna.ru/partner/                                                                               
 .magnet.kiev.ua/
 .mail.yahoo.com/mc/md.php?
+.majorgeeks.com/aff/
 .majorgeeks.com/images/banners/
 .mallcom.
 .mallorcash.
@@ -775,7 +776,6 @@
 .maxcash.com/
 .maxiadv.com/
 .maxserving.com/
-.majorgeeks.com/aff/
 .mb01.com/
 .mc-nudes.com/fhg2/
 .meadigital.com/
@@ -1278,9 +1278,9 @@
 /468-bann
 /468_60.
 /468_60_
-/468_80p
 /468_60v
 /468_80.
+/468_80p
 /468by60
 /468x060
 /468x280
@@ -1537,6 +1537,7 @@
 /adrot.js
 /adrotate/
 /AdRotator/
+/adrotator2.cgi?
 /adruptive.
 /ads-1.js
 /ads-2.js
@@ -1587,6 +1588,7 @@
 /ads/SkyScraper
 /ads/sponsor
 /ads/www/
+/Ads09a/
 /ads2.html
 /ads2.js
 /ads2.php?
@@ -1869,9 +1871,9 @@
 /download/ad/
 /drawad.php?
 /droelf.kit/a/
+/dynamic/ads/
 /dynamic_banner_
 /DynamicAd?
-/dynamic/ads/
 /ecom/failsafe/
 /ecomfw.
 /emailads/
@@ -3354,6 +3356,7 @@ http://stat-data.
 http://stat.novojoy.com
 http://static.4chan.org/support/
 http://static.apture.com/media/
+http://static.camprime.com/images/
 http://static.jpost.com/images/2009/NewSite/
 http://static.stileproject.com/l/
 http://static.thebigchair.com.au
@@ -3367,7 +3370,6 @@ http://stream11.instream.com/
 http://stuff.tv/Client/Skinning/
 http://switch.atdmt.
 http://synad2.
-http://static.camprime.com/images/
 http://syndication.jobthread.
 http://tag.regieci.com/
 http://target.vivid.
