--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8uZMiHWkxCbkK1BcAh/q2g
+# Checksum: k+ul58RXsUjZPlZsoHooyA
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3414,6 +3414,7 @@ http://widgets.shopping.com/widget/
 http://worthplaying.com/ad_
 http://wrapper.ign.com/
 http://www.4link.it/banners/
+http://www.adulttubetraffic.com
 http://www.afterdownload.com/
 http://www.farmholidays.is/IFrameAll
 http://www.fileporn.org/aff/
