--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: k+ul58RXsUjZPlZsoHooyA
+# Checksum: Ns8H7KuH+jSAcLheMtudKQ
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -414,6 +414,7 @@
 .com/adfile/
 .com/adimg/
 .com/adjs/
+.com/Ads-
 .com/ads.
 .com/ads/
 .com/ads_
