--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -18,17 +18,19 @@
 .acecounter.
 .active-tracking.
 .activemeter.
-.agencytradingdesk.net/
 .addfreestats.
 .addlvr.com/
 .addthis.com/red/psi/p.json?
 .addthiscdn.com/live/
 .addtoany.com/menu/transparent.gif
 .adidas.com/adidasAnalytics/
+.agencytradingdesk.net/
 .aggregateknowledge.
 .alenty.com/trk/
 .alexametrics.
 .allexperts.com/px/
+.alot.com/js/tracking.js
+.alot.com/tb/cookieWriter.php?
 .altastat.
 .alvenda.com/
 .amazon.com/clog/
@@ -150,12 +152,12 @@
 .com/vanity/?
 .com/w.gif?
 .compteur.com/cpt
-.constantcontact.com/
-.coremetrics.com/
 .confirmit.
+.constantcontact.com/
 .contenture.
 .conversionruler.
 .copacast.net/
+.coremetrics.com/
 .count24.de/
 .counter.gd/
 .counter.hackers.lv/
@@ -459,8 +461,8 @@
 .questionpro.
 .questradeaffiliates.com/
 .questus.com/
-.qzlog.com/
 .quintelligence.com/
+.qzlog.com/
 .radarurl.com/
 .rank-power.
 .ranking-hits.
@@ -800,8 +802,8 @@
 /condenet-metric.
 /cookie.crumb
 /cookie?affiliate
-/coretracking.php?
 /coremetrics/
+/coretracking.php?
 /count.asp?
 /count.cfm?
 /count.cgi?
@@ -1472,8 +1474,8 @@ http://flagcounter.com/count/
 http://fluctuo.com/
 http://fnlog.
 http://fx.gtop.ro/
-http://geo.yahoo.com/
 http://g.msn.com/
+http://geo.yahoo.com/
 http://geoip.
 http://getstatistics.se/
 http://gk18.info/
@@ -1552,8 +1554,8 @@ http://socialspark.com/images/
 http://st.mirror.co.uk/
 http://st.virginmedia.com/
 http://stat.4u.
-http://stat.onestat.com/
 http://stat.dealtime.com/
+http://stat.onestat.com/
 http://statistics.tattermedia.
 http://statistics.wibiya.com/
 http://statistik-
@@ -1564,11 +1566,11 @@ http://stats.blogoscoop.net/
 http://stats.break.com/
 http://stats.complex.com/
 http://stats.e-go.gr/
-http://stats.sitesuite.org/
 http://stats.greenoptions.com/
-http://stats.polldaddy.com/
 http://stats.justin.tv/
 http://stats.lightningcast.net/
+http://stats.polldaddy.com/
+http://stats.sitesuite.org/
 http://stats.topofblogs.com/
 http://stats.video.
 http://stats2.
