--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Ns8H7KuH+jSAcLheMtudKQ
+# Checksum: IdbAJNDCEi8i/hZ2//uRpQ
 # Updated: 24 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2239,6 +2239,7 @@
 /Scripts/AD/
 /scripts/ad_
 /scripts/adbox
+/scripts/peel.js.php
 /sd/ad.php
 /searchad_
 /servead.
