--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Y+0q9wnscVtlKl4Uxogg0g
-# Updated: 23 Jun 2010
+# Checksum: D6XVH9pFUk9u6QEZyV6Edw
+# Updated: 25 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -349,7 +349,7 @@
 .business.com/images2/directory.gif?
 .businessclick.
 .buxflow.com/
-.buysellads.
+.buysellads.                                          
 .buzznet.com/topscript.js.php?
 .c-on-text.com/
 .c8.net.ua/
@@ -360,6 +360,7 @@
 .camcrush.com/exports/
 .camelmedia.net/thumbs/
 .camsense.com/live/code.
+.camsitecash.com/
 .canoeklix.com/
 .capitatmarket.com/
 .captainad.
@@ -3359,6 +3360,7 @@ http://stream11.instream.com/
 http://stuff.tv/Client/Skinning/
 http://switch.atdmt.
 http://synad2.
+http://static.camprime.com/images/
 http://syndication.jobthread.
 http://tag.regieci.com/
 http://target.vivid.
