--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: D6XVH9pFUk9u6QEZyV6Edw
+# Checksum: elw5aqC2WyEpGM4AH08uyg
 # Updated: 25 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -882,6 +882,7 @@
 .oclus.com/
 .onads.com/
 .onenetworkdirect.
+.onhercam.com/dev/banners/
 .onlymelbourne.com.au/image/banner
 .openx.com/
 .openx.org/
