--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: elw5aqC2WyEpGM4AH08uyg
+# Checksum: bAkGn8ZUr/ZHqcZtAuFqsA
 # Updated: 25 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -559,6 +559,7 @@
 .flipflapflo.net/
 .fmonster.ff.nsg.org.ua/
 .fmpub.net/
+.fncash.com/
 .footnote.com/
 .forced-layer.de/
 .fptad.com/
@@ -945,6 +946,7 @@
 .privacyprotector.
 .privatamateure.com/
 .profitstat.biz/
+.program3.com/
 .projectwonderful.
 .pulse360.com/
 .qksrv.net/
@@ -1275,6 +1277,7 @@
 /468-bann
 /468_60.
 /468_60_
+/468_80p
 /468_60v
 /468_80.
 /468by60
