--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Dmwl+kUdyURIR/N0+memkA
-# Updated: 27 Jun 2010
+# Checksum: Y3eGGCvbV2upTpWXHUACVg
+# Updated: 26 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -925,10 +925,10 @@
 .planetaads.com/
 .planetdiscover.
 .platinumadvertisement.
+.plugrush.com/
 .pntra.com/b/
 .pntrac.com/b/
 .pntrs.com/b/
-.plugrush.com/
 .pointroll.com/
 .polyad.net/
 .poonproscash.
@@ -1329,12 +1329,12 @@
 /728x90_
 /728x90b
 /728x90c
+/728x90D
+/728x90F
 /728x90n
 /750-100
 /760x120
 /760x90_
-/728x90F
-/728x90D
 /768x90.
 /80x468_
 /900x350_
@@ -1430,8 +1430,8 @@
 /ad_left_
 /ad_links/
 /ad_manage.
-/ad_medium_
 /ad_media/
+/ad_medium_
 /ad_onbit
 /ad_peel/
 /ad_pos=
@@ -1872,9 +1872,9 @@
 /displayads.
 /DNSads.
 /doors/ads/
+/doubleclick_ads.
 /doubleclickcontainer.aspx?
 /doubleclickloader.
-/doubleclick_ads.
 /download/ad/
 /drawad.php?
 /droelf.kit/a/
@@ -1927,7 +1927,6 @@
 /geo/ads.
 /geobox.html
 /geoday.ru/
-/getAds-
 /get-ad.php?
 /get_ads.js?
 /get_banner.asp?
@@ -1937,6 +1936,7 @@
 /getad.php
 /getADDs.aspx?
 /getADDs.aspx?
+/getAds-
 /getAds.htm
 /getads.js
 /getAds/
@@ -2514,8 +2514,8 @@
 750x80.swf
 750x90.gif
 790x250.gif
-80x468.jpg
 800x120.gif
+80x468.jpg
 972_70.gif
 ;sz=1x1,
 ;sz=300x60
@@ -2764,6 +2764,7 @@ _generic_ad.
 _geobanner.
 _google_ad.
 _google_video_ads
+_hp_promo_
 _leftx280_
 _minibanner
 _org_ad.
@@ -2952,9 +2953,9 @@ http://ads.i-am-bored.com/
 http://ads.imeem.com/
 http://ads.ireel.com/
 http://ads.julesjordanvideo.com/
-http://ads.livesexsells.com/
 http://ads.kaktuz.net/
 http://ads.kicker.de/
+http://ads.livesexsells.com/
 http://ads.mefeedia.com/
 http://ads.mgnetwork.com/
 http://ads.mmania.com/
