--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Y3eGGCvbV2upTpWXHUACVg
+# Checksum: RP4WAQgB/b5IC/xawn9BtA
 # Updated: 26 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3113,6 +3113,7 @@ http://cdn.doubleclick.
 http://cdn.eyewonder.com/
 http://cdn.liverail.com/adasset/
 http://cdn.unicast.msn.com/
+http://cdns.webcams.com/e2
 http://click.absoluteagency.
 http://click.dtiserv2.com/
 http://click.paran.com/log.html?
