--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: IdbAJNDCEi8i/hZ2//uRpQ
-# Updated: 24 Jun 2010
+# Checksum: ED1LdVGWK8/jjvXkx089FQ
+# Updated: 26 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1028,6 +1028,7 @@
 .sociallypublish.com/publish/
 .socialmedia.com/
 .softcab.com/google.php?
+.somethingawful.com/b.
 .sophus3.
 .sparkstudios.
 .specialsuggestion.
