--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ED1LdVGWK8/jjvXkx089FQ
+# Checksum: nvMDFteJjtVoaRSozsG86g
 # Updated: 26 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -928,6 +928,7 @@
 .pntra.com/b/
 .pntrac.com/b/
 .pntrs.com/b/
+.plugrush.com/
 .pointroll.com/
 .polyad.net/
 .poonproscash.
