--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nvMDFteJjtVoaRSozsG86g
-# Updated: 26 Jun 2010
+# Checksum: NpJXCWBseepD3qc2UDVmSg
+# Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1871,6 +1871,7 @@
 /doors/ads/
 /doubleclickcontainer.aspx?
 /doubleclickloader.
+/doubleclick_ads.
 /download/ad/
 /drawad.php?
 /droelf.kit/a/
