--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -1127,6 +1127,7 @@
 /script/analytics/
 /scripts/affaction.asp?
 /sdctag.js?
+/securetracker.
 /SellathonCounterService.
 /SenseHandler.ashx?
 /seomonitor/
