--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: NpJXCWBseepD3qc2UDVmSg
+# Checksum: Qz8GmC61GVini4nqR3mYaA
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1429,6 +1429,7 @@
 /ad_links/
 /ad_manage.
 /ad_medium_
+/ad_media/
 /ad_onbit
 /ad_peel/
 /ad_pos=
@@ -3060,7 +3061,7 @@ http://banners.adultfriendfinder.
 http://banners.adventory.com/
 http://banners.alt.com/
 http://banners.camdough.com/
-http://banners.cfspm.com.au/*
+http://banners.cfspm.com.au/
 http://banners.facebookofsex.com/
 http://banners.itweb.co.za/
 http://banners.ixitools.
