--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Qz8GmC61GVini4nqR3mYaA
+# Checksum: PXKTFegS3bT1NfjQT/oENA
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2488,6 +2488,7 @@
 470x60.gif
 470x60.jpg
 470x60.swf
+480x80.jpg
 486x60.js
 522x62.jpg
 700200.jpg
@@ -2947,6 +2948,7 @@ http://ads.i-am-bored.com/
 http://ads.imeem.com/
 http://ads.ireel.com/
 http://ads.julesjordanvideo.com/
+http://ads.livesexsells.com/
 http://ads.kaktuz.net/
 http://ads.kicker.de/
 http://ads.mefeedia.com/
@@ -3096,6 +3098,7 @@ http://cache.worldfriends.tv/
 http://camleyads.info/
 http://cams.spacash.com/
 http://cas.clickability.
+http://cash.femjoy.com/
 http://cash4movie.com/bilder/
 http://cashad2
 http://cashtraff.com/selljs/
