--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: PXKTFegS3bT1NfjQT/oENA
+# Checksum: JINF4ZubW17dhOYQBMltPQ
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2511,6 +2511,7 @@
 750x80.swf
 750x90.gif
 790x250.gif
+80x468.jpg
 800x120.gif
 972_70.gif
 ;sz=1x1,
