--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: JINF4ZubW17dhOYQBMltPQ
+# Checksum: 4JNq2VJhFIGwth+FBJRPNg
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1925,6 +1925,7 @@
 /geo/ads.
 /geobox.html
 /geoday.ru/
+/getAds-
 /get-ad.php?
 /get_ads.js?
 /get_banner.asp?
