--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4JNq2VJhFIGwth+FBJRPNg
+# Checksum: Dnd7mXC/KWC1s05aHION+g
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1333,6 +1333,7 @@
 /750-100
 /760x120
 /760x90_
+/728x90F
 /768x90.
 /80x468_
 /900x350_
