--- a/easylistfanboy/iron/adblock-jpn.ini
+++ b/easylistfanboy/iron/adblock-jpn.ini
@@ -58,6 +58,7 @@
 .jp/Zen?
 .kau.li/ad.js
 .kazenoashiato.jp/file/index/FILECD/
+.giants.jp/pts/ad/
 .logoole.yahoo.co.jp/
 .magma-analytics.
 .meiwasuisan.com/images/numbers
