--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: RP4WAQgB/b5IC/xawn9BtA
-# Updated: 26 Jun 2010
+# Checksum: kJ5djnAobkLsBBE7Q39RQQ
+# Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -384,6 +384,7 @@
 .click4free.info/
 .clickad.pl/
 .clickbank.net/
+.clickcloud.info/
 .clickhype.
 .clickintext.
 .clickkingdom.
@@ -528,6 +529,7 @@
 .eurobate.
 .euroclick.
 .euros4click.
+.euro-rx.com/
 .eweek.com/images/stories/Marketing/
 .exaccess.ru/
 .exclusivepussy.com/tcgma/?
@@ -1078,6 +1080,7 @@
 .text-link-ads.
 .textads.
 .thewebgemnetwork.com/
+.thehun.net/overflow/banners/
 .thinktarget.
 .thumbcow.com/livebanner/
 .tidaltv.com/
@@ -3138,6 +3141,7 @@ http://datingtools.spacash.
 http://dcad.watersoul.com/
 http://deals.buxr.
 http://delivery.adyea.com/
+http://design.deecash.com/
 http://dig.abclocal.go.com/PreRoll/
 http://digg.com/ad/
 http://digitadmedia.com/
