--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kJ5djnAobkLsBBE7Q39RQQ
+# Checksum: DSAZB9iyuzgRP8NZsbRj5w
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -567,6 +567,7 @@
 .forced-layer.de/
 .fptad.com/
 .fr/RealMedia/
+.freakads.com/
 .freaksofcock.com/track/
 .free-times.com/Image/Pool/
 .freebunker.com/includes/js/ex.js
