--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: FMRNZQ2jLa5/WJW8VGyDXQ
-# Updated: 28 Jun 2010
+# Checksum: L+atGoRmIfFNJRkz9L/Scg
+# Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2752,6 +2752,7 @@ _adengage_
 _adlog.asp?
 _adRight.
 _Ads/InHouse
+_ad_placeholder-
 _ads1.asp
 _ads_index_
 _adshow.asp?
@@ -2760,6 +2761,7 @@ _advertisement_
 _assets/ads/
 _banner/
 _blogads.
+_box_ad_
 _cedexis.
 _custom_ad.
 _custom_ad_
@@ -2773,6 +2775,7 @@ _geobanner.
 _google_ad.
 _google_video_ads
 _hp_promo_
+_iframe_ad_
 _leftx280_
 _minibanner
 _org_ad.
