--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: L+atGoRmIfFNJRkz9L/Scg
+# Checksum: rDI7jQeKDEcOPyGFHYFY+w
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3383,6 +3383,7 @@ http://squeeder.com/
 http://stat-data.
 http://stat.novojoy.com
 http://static.4chan.org/support/
+http://static.liverail.com/js/companions/
 http://static.apture.com/media/
 http://static.camprime.com/images/
 http://static.jpost.com/images/2009/NewSite/
