--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: rDI7jQeKDEcOPyGFHYFY+w
+# Checksum: GscY11ZOLjUe9awVm75DPw
 # Updated: 27 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2325,6 +2325,7 @@
 /sponsors/amg.php?
 /sponsors_box.
 /sponsors_box.
+/spotx_adapter.
 /SpotXchangePlugin.
 /square-ads/
 /st?ad_type
