--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: DSAZB9iyuzgRP8NZsbRj5w
-# Updated: 27 Jun 2010
+# Checksum: chrfxe09160L4zA0XUG3bQ
+# Updated: 28 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -690,6 +690,7 @@
 .itpro.co.uk/images/skins/
 .itslive.com/exports/
 .itsptp.com/
+.itpro.co.uk/images/skins/
 .ivwbox.de/
 .iwantu.com/content/
 .ixnp.com/
