--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: chrfxe09160L4zA0XUG3bQ
+# Checksum: CkBCY581NgS+fn/LoMSe9w
 # Updated: 28 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2069,6 +2069,7 @@
 /js/ads
 /js/ads/
 /js/ads_
+/js/takeover/
 /js_source/
 /jsAdScript
 /jserver/random
@@ -2957,6 +2958,7 @@ http://ads.heias.com/
 http://ads.i-am-bored.com/
 http://ads.imeem.com/
 http://ads.ireel.com/
+http://ads.jetpackdigital.com/
 http://ads.julesjordanvideo.com/
 http://ads.kaktuz.net/
 http://ads.kicker.de/
