--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -346,6 +346,7 @@
 .liverail.com/track/?
 .lloogg.com/
 .lookery.com/
+.looksmart.com/
 .loomia.com/js/setcookie.
 .losstrack.com/
 .lycos.com/img/log/
