--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: CkBCY581NgS+fn/LoMSe9w
+# Checksum: FMRNZQ2jLa5/WJW8VGyDXQ
 # Updated: 28 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1162,6 +1162,7 @@
 .vod-cash.
 .vzzk.com/uploads/banners/
 .w3exit.com/
+.whaleads.com/
 .wamcash.com/wcalertas/
 .watchmygf.com/preview/
 .webads.nl/
@@ -1897,6 +1898,7 @@
 /eshopoffer.asp
 /etology.
 /event.ng/Type
+/exit_popup.
 /ewtrack.gif?
 /external/ads/
 /external_ads.
