--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: GscY11ZOLjUe9awVm75DPw
-# Updated: 27 Jun 2010
+# Checksum: Mfn8/01ycsCkkR7apxed2w
+# Updated: 28 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -526,10 +526,10 @@
 .espn.go.com/ads/
 .etargetnet.com/generic/generic.php?
 .etology.
+.euro-rx.com/
 .eurobate.
 .euroclick.
 .euros4click.
-.euro-rx.com/
 .eweek.com/images/stories/Marketing/
 .exaccess.ru/
 .exclusivepussy.com/tcgma/?
@@ -688,9 +688,9 @@
 .inviziads.com/
 .ipromote.com/
 .itpro.co.uk/images/skins/
+.itpro.co.uk/images/skins/
 .itslive.com/exports/
 .itsptp.com/
-.itpro.co.uk/images/skins/
 .ivwbox.de/
 .iwantu.com/content/
 .ixnp.com/
@@ -1081,8 +1081,8 @@
 .testseek.com/price_pricegrabber_
 .text-link-ads.
 .textads.
-.thewebgemnetwork.com/
 .thehun.net/overflow/banners/
+.thewebgemnetwork.com/
 .thinktarget.
 .thumbcow.com/livebanner/
 .tidaltv.com/
@@ -1162,7 +1162,6 @@
 .vod-cash.
 .vzzk.com/uploads/banners/
 .w3exit.com/
-.whaleads.com/
 .wamcash.com/wcalertas/
 .watchmygf.com/preview/
 .webads.nl/
@@ -1173,6 +1172,7 @@
 .weselectmodels.com/ZillionaireDate_Banner/
 .weselltraffic.
 .wgreatdream.com/
+.whaleads.com/
 .wibiya.com/toolbarLoader.php?
 .widgetbucks.
 .wildamaginations.com/mdm/
@@ -1898,8 +1898,8 @@
 /eshopoffer.asp
 /etology.
 /event.ng/Type
-/exit_popup.
 /ewtrack.gif?
+/exit_popup.
 /external/ads/
 /external_ads.
 /extraMustard_topperIntro_
@@ -2007,6 +2007,7 @@
 /iframe_ads?
 /iframe_chitika_
 /iframes/adbrite.
+/image/ads/
 /image/ads/
 /image/ads_
 /image/adv
@@ -2746,6 +2747,7 @@ _ad_label.gif
 _ad_middle_
 _ad_one.html?
 _ad_page_
+_ad_placeholder-
 _ad_renderer_
 _adcall.php/
 _adcom.php?
@@ -2753,7 +2755,6 @@ _adengage_
 _adlog.asp?
 _adRight.
 _Ads/InHouse
-_ad_placeholder-
 _ads1.asp
 _ads_index_
 _adshow.asp?
@@ -3384,10 +3385,10 @@ http://squeeder.com/
 http://stat-data.
 http://stat.novojoy.com
 http://static.4chan.org/support/
-http://static.liverail.com/js/companions/
 http://static.apture.com/media/
 http://static.camprime.com/images/
 http://static.jpost.com/images/2009/NewSite/
+http://static.liverail.com/js/companions/
 http://static.stileproject.com/l/
 http://static.thebigchair.com.au
 http://static.wildcammy.com/
