--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Mfn8/01ycsCkkR7apxed2w
+# Checksum: RWg7rHJb8WE+viIQNHk9RQ
 # Updated: 28 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1253,6 +1253,7 @@
 /160x600
 /170x700.
 /175x250_
+/178x134/
 /180x150-
 /180x150/
 /184x100_
