--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: RWg7rHJb8WE+viIQNHk9RQ
+# Checksum: q8XKSCqypXn+4u1QEl/YFw
 # Updated: 28 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2107,6 +2107,8 @@
 /mainAD.html
 /mcad.php?
 /media/ads/
+/mediaplayer/island?zone=
+/mediaplayer/leaderboard?zone=
 /MetaAdServer/
 /mgid.html
 /middle_adv_
