--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -254,7 +254,7 @@
 .geovisite.com
 .gif?rand=
 .glanceguide.
-.glbdns.microsoft.com/mc/
+.glbdns.microsoft.com/
 .globalviptraffic.
 .godaddy.com/image.aspx?
 .google-analytics.com/ga.js?jsonp
