--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: q8XKSCqypXn+4u1QEl/YFw
-# Updated: 28 Jun 2010
+# Checksum: G3KY/rxXcytJMXQQbDYqfA
+# Updated: 29 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1066,6 +1066,7 @@
 .swf?iurl=http
 .swf?link1=http
 .swiftco.net/banner/
+.symbiosting.com/LogicBuy/
 .targetpoint.com/
 .targetsaver.
 .targetspot.com/player/
