--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: G3KY/rxXcytJMXQQbDYqfA
-# Updated: 29 Jun 2010
+# Checksum: OmgghWPYlJimTHpqwbR1WQ
+# Updated: 30 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2301,6 +2301,7 @@
 /silver/ads/
 /site_ads.
 /SiteAds/
+/skin-background.jpg
 /skyframeopenads
 /slate_ad2.
 /SlideshowGallery.
