--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: OmgghWPYlJimTHpqwbR1WQ
+# Checksum: fusrpPefuanq2YN97YCMvA
 # Updated: 30 Jun 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -620,6 +620,7 @@
 .grafstat.ro/
 .grapeshot.co.uk/
 .grapevine.is/Media/Flash/
+.ghacks.net/skin-background.
 .hardsextube.com/ads-
 .hentaibiz.com/b/
 .hipals.com/cgi-bin/
@@ -2301,7 +2302,6 @@
 /silver/ads/
 /site_ads.
 /SiteAds/
-/skin-background.jpg
 /skyframeopenads
 /slate_ad2.
 /SlideshowGallery.
