--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: fusrpPefuanq2YN97YCMvA
-# Updated: 30 Jun 2010
+# Checksum: 4SAtJmvrTQiaswH3ozoZdQ
+# Updated: 1 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -621,6 +621,7 @@
 .grapeshot.co.uk/
 .grapevine.is/Media/Flash/
 .ghacks.net/skin-background.
+.goodgearguide.com.au/files/skins/
 .hardsextube.com/ads-
 .hentaibiz.com/b/
 .hipals.com/cgi-bin/
