--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4SAtJmvrTQiaswH3ozoZdQ
+# Checksum: ew97n5nS9UfJVEsDP6YDNg
 # Updated: 1 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1575,6 +1575,7 @@
 /ads/a.aspx?
 /ads/ad.
 /ads/ad_
+/ads/acctid
 /ads/adbot
 /ads/adg.js
 /ads/adnet
