--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ew97n5nS9UfJVEsDP6YDNg
+# Checksum: MCLjqt6dZ+GJuOj8G+/lYA
 # Updated: 1 Jul 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2854,6 +2854,7 @@ http://196.41.0.207/
 http://1under.ru/
 http://208.43.84.120/
 http://209.172.55.5/
+http://206.217.206.137/
 http://216.151.186.5/
 http://4gifs.com/Ads/
 http://63.225.61.4
@@ -3011,6 +3012,7 @@ http://ads.sup.com/
 http://ads.tattermedia.
 http://ads.trademe.co.nz/
 http://ads.trafficspaces.net/
+http://ads.tube1.com/
 http://ads.tweetmeme.com/
 http://ads.undertone.com/
 http://ads.w3hoster.de/
