--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -49,6 +49,7 @@
 .arkayne.com/
 .associatedcontent.com/action_cookie.
 .astrology.com/visits/
+.atdmt.com/
 .au/t.ashx?
 .auctiva.com/Default.aspx?query
 .aweber.com/form/displays.htm?
@@ -380,6 +381,7 @@
 .mm7.net/
 .mmismm.
 .monetate.net/
+.mookie1.com/
 .monitus.net/
 .mpora.com/tv/player/stats/
 .mpwe.net/
